# kursovaArch

./: CMakeLists.txt  README.md
sources/: asol.c  main.cpp  ssol.c
